--- a/tech-stack/index.css
+++ b/tech-stack/index.css
@@ -1,3 +1,24 @@
+details summary {
+    list-style: none;
+}
+
+details summary::-webkit-details-marker {
+    display: none;
+}
+
+details[open] .toggle-pill {
+    background-color: rgba(226, 232, 240, 0.7);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8);
+}
+
+details[open] .toggle-icon-plus {
+    display: none;
+}
+
+details[open] .toggle-icon-minus {
+    display: block;
+}
+
 .tool-card {
     position: relative;
     transform: translateY(0);
